🐛 Fix width overflow of welcome feed #1141

--- a/kmfrontend/src/frontend/styles/start/WelcomePage.scss
+++ b/kmfrontend/src/frontend/styles/start/WelcomePage.scss
@@ -168,6 +168,7 @@
 			display: flex;
 			flex-direction: column;
 			border-radius: 0 .5em .5em 0;
+			overflow: auto;
 			@media (max-width: $mugen-breakpoint-large) {
 				border-radius: 0;
 			}
